Fix vanish Activity on orientation changes

--- a/app/src/main/res/layout/square.xml
+++ b/app/src/main/res/layout/square.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:id="@+id/asdad">
+    android:id="@+id/dsfds"
+    android:layout_margin="7dp">
 
     <TextView
         android:id="@+id/square_text"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
         android:background="@color/square_even"
-        android:textSize="14sp"
         android:gravity="center"
         android:textAlignment="gravity"
-        android:layout_margin="3dp"/>
+        android:textColor="@color/white"
+        android:textSize="14sp" />
 
-</LinearLayout>
+</FrameLayout>
