--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -26,7 +26,7 @@
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#33FF0000"
+        android:background="@color/errorViewColor"
         android:padding="16dp">
 
         <TextView
